@@ -3,8 +3,7 @@
     <editor-bookmarks xmlns="http://www.netbeans.org/ns/editor-bookmarks/2" lastBookmarkId="0"/>
     <open-files xmlns="http://www.netbeans.org/ns/projectui-open-files/2">
         <group>
-            <file>file:/home/gepr/local/bsg/bsg/src/bsg/test/script.js</file>
-            <file>file:/home/gepr/local/bsg/bsg/src/bsg/util/ScriptEval.java</file>
+            <file>file:/home/gepr/corp/td/ucsf/dev/bsg/bsg/src/bsg/util/ScriptEval.java</file>
         </group>
     </open-files>
 </project-private>
